--- a/MetalTessellation/Base.lproj/Main.storyboard
+++ b/MetalTessellation/Base.lproj/Main.storyboard
@@ -691,7 +691,7 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="yAh-37-gi9" customClass="MTKView">
                                 <rect key="frame" x="0.0" y="0.0" width="498" height="773"/>
                                 <subviews>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3y-2f-dVJ">
+                                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3y-2f-dVJ">
                                         <rect key="frame" x="18" y="20" width="4" height="48"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" placeholderString="" id="R9S-91-VtK">
                                             <font key="font" metaFont="systemBold" size="40"/>
@@ -768,10 +768,13 @@
                                     </button>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eqk-d2-lqb">
                                         <rect key="frame" x="14" y="54" width="232" height="32"/>
-                                        <buttonCell key="cell" type="push" title="Demo2 - Phong Tessellation" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pPj-9T-H91">
+                                        <buttonCell key="cell" type="push" title="Demo3 - Displacement mapping" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pPj-9T-H91">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
+                                        <connections>
+                                            <action selector="tapDemo3WithSender:" target="XfG-lQ-9wD" id="nDH-Gu-pVv"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
